payment methods implemented. pooooof. >_<
