# src/libs/user-directory/classes/invoice/invoice.model.ts
@@ -1,8 +1,9 @@
-import { IInvoice, IPaymentPlan, IUser, PaymentStatus } from '../../interfaces';
+import { IInvoice, IPaymentPlan, IUser } from '../../interfaces';
+import { PaymentStatus } from '../../../payments';
 
 export class Invoice implements IInvoice {
   readonly createDate?: Date;
   description?: string;
 
-  constructor(public user: IUser, public plan: IPaymentPlan, paymentStatus: PaymentStatus = PaymentStatus.incomplete) {}
+  constructor(public user: IUser, public plan: IPaymentPlan,public paymentStatus: PaymentStatus = PaymentStatus.incomplete, public payPrice: number = plan.price) {}
 }
