# src/libs/user-directory/interfaces/models/index.ts
@@ -2,5 +2,3 @@ export { IApplication } from './application.interface';
 export { IInvoice } from './invoice.interface';
 export { IPaymentPlan } from './payment-plan.interface';
 export { IUser } from './user.interface';
-export * from './payment-result.interface';
-export * from '../../../payments/lib/models/payment-status.type';
