# src/libs/user-directory/interfaces/models/payment-result.interface.ts
@@ -1,5 +1,0 @@
-import { PaymentStatus } from ".";
-
-export interface IPaymentResult {
-    status: PaymentStatus;
-}
